alter project compass and libs

--- a/index.html
+++ b/index.html
@@ -16,17 +16,18 @@
     <!-- [ CSS LIBS ] -->
 
     <!-- [ CSS COMMONS ] -->
+    <link rel="stylesheet" href="static/css/main.css">
     <link rel="stylesheet" href="static/css/views/base.css">
 
     <!-- [ CSS VIEWS ] -->
     <link rel="stylesheet" href="static/css/views/home.css">
 
-    <script src="static/js/libs/modernizr.custom.66265.js"></script>
+    <script src="static/js/core/libs/modernizr.custom.66265.js"></script>
 </head>
 <body>
 
     <!-- [ JS LIBS ] -->
-    <script src="static/js/libs/jquery-1.11.1.min.js"></script>
+    <script src="static/js/core/libs/jquery-1.11.1.min.js"></script>
 
     <!-- [ JS VIEWS ] -->
 
