--- a/index.html
+++ b/index.html
@@ -13,23 +13,24 @@
     <meta name="classification" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <!-- [ CSS LIBS ] -->
+    <!-- [ css libs ] -->
 
-    <!-- [ CSS COMMONS ] -->
+    <!-- [ css common ] -->
     <link rel="stylesheet" href="static/css/main.css">
     <link rel="stylesheet" href="static/css/views/base.css">
 
-    <!-- [ CSS VIEWS ] -->
+    <!-- [ css views ] -->
     <link rel="stylesheet" href="static/css/views/home.css">
 
-    <script src="static/js/core/libs/modernizr.custom.66265.js"></script>
+    <script src="static/js/libs/modernizr.custom.66265.js"></script>
 </head>
 <body>
 
-    <!-- [ JS LIBS ] -->
-    <script src="static/js/core/libs/jquery-1.11.1.min.js"></script>
+    <!-- [ js libs ] -->
+    <script src="static/js/libs/jquery-1.11.1.min.js"></script>
 
-    <!-- [ JS VIEWS ] -->
+    <!-- [ js views ] -->
+    <script src="static/js/views/BaseView.js"></script>
 
 </body>
 </html>
