include generate sprites compass

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>HTML5 Boilerplate / Compass</title>
+    
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="classification" content="">
@@ -28,6 +29,9 @@
 
     <!-- [ js libs ] -->
     <script src="static/js/libs/jquery-1.11.1.min.js"></script>
+
+    <!-- [ js core ] -->
+    <script src="static/js/core/utils.js"></script>
 
     <!-- [ js views ] -->
     <script src="static/js/views/BaseView.js"></script>
