--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
     <title>HTML5 Boilerplate / Compass</title>
     
-    <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="classification" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <!-- [ css libs ] -->
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
 
     <!-- [ css common ] -->
     <link rel="stylesheet" href="static/css/main.css">
@@ -28,7 +28,7 @@
 <body>
 
     <!-- [ js libs ] -->
-    <script src="static/js/libs/jquery-1.11.1.min.js"></script>
+    <script src="static/js/libs/jquery-2.1.4.min.js"></script>
 
     <!-- [ js core ] -->
     <script src="static/js/app/core/utils.js"></script>
